--- a/[Gulp build] template_project/src/css/reset.css
+++ b/[Gulp build] template_project/src/css/reset.css
@@ -1,5 +1,9 @@
 /* Reset styles */
 
+html, body {
+	line-height: 1;
+}
+
 *, *::before, *::after {
 	box-sizing: border-box;
 
@@ -9,17 +13,8 @@
 	margin: 0;
 }
 
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
 ul, ol, li {
 	list-style: none;
-}
-
-img {
-	vertical-align: top;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,8 +22,20 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: inherit;
 }
 
-html, body {
-	line-height: 1;
+img {
+	vertical-align: top;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+button {
+	cursor: pointer;
+
+	background: none;
+	border: none;
 }
 
 /* Reset styles */
