--- a/[Gulp build] template_project/src/css/reset.css
+++ b/[Gulp build] template_project/src/css/reset.css
@@ -7,6 +7,7 @@ html, body {
 *, *::before, *::after {
 	box-sizing: border-box;
 
+	outline: none;
 	border: 0;
 
 	padding: 0;
@@ -17,7 +18,7 @@ ul, ol, li {
 	list-style: none;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, blockquote {
 	font-size: inherit;
 	font-weight: inherit;
 
@@ -29,6 +30,8 @@ img {
 }
 
 a {
+	display: inline-block;
+
 	color: inherit;
 	text-decoration: none;
 }
