--- a/[Gulp build] template_project/src/css/reset.css
+++ b/[Gulp build] template_project/src/css/reset.css
@@ -1,11 +1,13 @@
 /* Reset styles */
 
 html, body {
+	box-sizing: border-box;
+
 	line-height: 1;
 }
 
 *, *::before, *::after {
-	box-sizing: border-box;
+	box-sizing: inherit;
 
 	outline: none;
 	border: 0;
@@ -14,105 +16,81 @@ html, body {
 	margin: 0;
 }
 
-ul, ol, li {
+ul[class],
+ol[class],
+li[class] {
 	list-style: none;
 }
 
 h1, h2, h3, h4, h5, h6, p, blockquote {
-	font-size: inherit;
-	font-weight: inherit;
+	font: inherit;
 	color: inherit;
-
-	line-height: inherit;
 }
 
-img {
-	vertical-align: top;
-}
-
-a {
+a[class] {
 	display: inline-block;
 
 	color: inherit;
 	text-decoration: none;
 }
 
+img {
+	max-width: 100%;
+	
+	display: inline-block;
+
+	vertical-align: top;
+}
+
 input {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-
+	font: inherit;
 	color: inherit;
-	background-color: transparent;
 
-	line-height: inherit;
+	background-color: transparent;
 
 	outline: none;
 }
 
 ::-webkit-input-placeholder {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-
-	line-height: inherit;
+	font: inherit;
 }
 
 ::-moz-placeholder {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-
-	line-height: inherit;
+	font: inherit;
 }
 
 :-moz-placeholder {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-
-	line-height: inherit;
+	font: inherit;
 }
 
 :-ms-input-placeholder {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-
-	line-height: inherit;
+	font: inherit;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
+
     margin: 0;
 }
 
 textarea {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
+	font: inherit;
 
 	color: inherit;
 	background-color: transparent;
-
-	line-height: inherit;
 
 	resize: none;
 	outline: none;
 }
 
 button {
-	font-size: inherit;
-	font-family: inherit;
-	font-weight: inherit;
-
-	cursor: pointer;
-	
+	font: inherit;
 	color: inherit;
+	
 	background-color: transparent;
 
-	line-height: inherit;
+	cursor: pointer;
 
 	border: none;
 }
