--- a/traveland/src/scss/style.scss
+++ b/traveland/src/scss/style.scss
@@ -17,15 +17,15 @@ body {
 	display: flex;
 	flex-direction: column;
 
-	// font-size: px;
-	// font-family: ;
-	// font-weight: ;
-	
-	// color: ;
+	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 400;
+
+	color: #ffffff;
 }
 
 .container {
-	// max-width: (X + 30)px;
+	max-width: 1170px;
 	
 	padding: 0 15px;
 	margin: 0 auto;
@@ -33,9 +33,595 @@ body {
 
 .main {
 	flex-grow: 1;
+
+	&__title {
+		font-size: 43px;
+
+		text-align: center;
+	}
+
+	&__description {
+		text-align: center;
+
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+.logo {
+	font-size: 24px;
+	font-family: 'Ribeye', cursive;
+	
+	line-height: 1.5;
+	letter-spacing: 0.06em;
+}
+
+.button {
+	line-height: 1.5;
+
+	background-color: #C9453B;
+	border-radius: 5px;
+
+	transition: .5s;
+	
+	&:hover {
+		box-shadow: 0px 0px 5px 0.5px #C9453B;
+	}
+}
+
+.title {
+	font-family: 'Gelasio', serif;
+	font-weight: 500;
+	color: #000000;
+
+	line-height: 1.4;
+}
+
+.description {
+	font-size: 18px;
+	color: rgba(0, 0, 0, 0.6);
+
+	line-height: 1.6;
 }
 
 // Main styles
+
+
+// Header styles
+
+.header {
+	@extend %absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+
+	padding: 35px 0;
+
+	&__container {
+		@extend %flexBetween;
+		align-items: center;
+	}
+
+	&-nav {
+		margin-left: 20px;
+	}
+
+	&__button {
+		padding: 14px 35px;
+	}
+}
+
+.menu {
+	display: flex;
+	align-items: center;
+
+	column-gap: 50px;
+
+	&__link {
+		position: relative;
+
+		font-size: 18px;
+		font-weight: 500;
+		
+		line-height: 1.5;
+
+		transition: .5s;
+
+		&::after {
+			@extend %menuLinkAfter;
+			background-color: #ffffff;
+		}
+
+		&:hover::after {
+			right: 0;
+		}
+	}
+}
+
+// Header styles
+
+
+
+// Hero styles
+
+.hero {
+	min-height: 100vh;
+
+	display: flex;
+	align-items: center;
+
+	@extend %coverBg;
+
+	padding-top: 40px;
+
+	&__container {
+		width: 100%;
+	}
+
+	&__title {
+		max-width: 805px;
+
+		font-size: 65px;
+		font-family: 'Gelasio', serif;
+		font-weight: bold;
+		
+		line-height: 1.2;
+
+		margin-bottom: 30px;
+	}
+
+	&__description {
+		max-width: 460px;
+
+		font-size: 18px;
+		color: rgba(255, 255, 255, 0.6);
+
+		line-height: 1.6;
+
+		margin-bottom: 40px;
+	}
+
+	&__button {
+		padding: 18px 46px;
+	}
+}
+
+// Hero styles
+
+
+
+// Popular-locations styles
+
+.popular-locations {
+	padding-top: 140px;
+
+	&__title {
+		margin-bottom: 20px;
+	}
+
+	&__description {
+		max-width: 735px;
+		
+		margin-bottom: 50px;
+	}
+
+	&__item-box {
+		@extend %flexBetween;
+		align-items: flex-start;
+
+		flex-wrap: wrap;
+
+		gap: 20px;
+		// по вертикали потом подумать
+	}
+}
+
+.location-item {
+	max-width: 360px;
+
+	background-color: #FFFFFF;
+
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+
+	transition: .5s;
+
+	&__img {
+		width: 100%;
+		height: 330px;
+
+		object-fit: cover;
+	}
+
+	&__text-box {
+		width: 100%;
+
+		text-align: center;
+
+		padding: 35px 17px;
+	}
+
+	&__title {
+		font-size: 24px;
+		margin-bottom: 10px;
+	}
+
+	&:hover {
+		transform: translateY(-10px);
+
+		box-shadow: 0px 6px 45px rgba(0, 0, 0, 0.08);
+	}
+}
+
+// Popular-locations styles
+
+
+
+// Special-offers styles
+
+.special-offers {
+	padding-top: 140px;
+
+	&__title {
+		margin-bottom: 20px;
+	}
+
+	&__description {
+		max-width: 655px;
+
+		margin-bottom: 60px;
+	}
+}
+
+.offer-swiper {
+	width: 81%;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
+	&__bottom-box {
+		position: relative;
+
+		padding-bottom: 5.5px;
+		margin-top: 50px;
+	}
+
+	.offer-swiper__pagination {
+		position: relative;
+		bottom: 0;
+	}
+
+	.swiper-pagination-bullet {
+		width: 75px;
+		height: 5px;
+
+		background: rgba(201, 69, 59, 0.1);
+		border-radius: 10px;
+
+		opacity: 1;
+
+		margin: 0 3px;
+	}
+
+	.swiper-pagination-bullet.swiper-pagination-bullet-active {
+		background: #C9453B;
+	}
+
+	&__button-arrow {
+		top: auto;
+		bottom: 0;
+
+		width: auto;
+		height: auto;
+
+		padding: 5px;
+
+		&::after {
+			content: "";
+		}
+	}
+
+	&__button-prev {
+		left: -50px;
+
+		transform: translateX(-100%);
+	}
+
+	&__button-next {
+		right: -50px;
+
+		transform: translateX(100%);
+
+		.offer-swiper__button-img {
+			transform: rotate(180deg);
+		}
+	}
+}
+
+.offer-slide {
+	display: flex;
+	justify-content: center;
+
+	&__content {
+		width: 262px;
+	}
+
+	&__img {
+		width: 100%;
+		height: 175px;
+
+		object-fit: cover;
+
+		border-radius: 10px;
+
+		margin-bottom: 20px;
+	}
+
+	&__title {
+		font-size: 24px;
+
+		margin-bottom: 8px;
+	}
+
+	&__description {
+		display: flex;
+		align-items: center;
+
+		margin-bottom: 8px;
+	}
+
+	&__position {
+		@extend %verticalCenter;
+
+		margin-right: 50px;
+
+		&-img {
+			margin-right: 10px;
+		}
+
+		&-text {
+			font-size: 20px;
+			color: rgba(0, 0, 0, 0.6);
+
+			line-height: 1.5;
+		}
+	}
+
+	&__rating {
+		@extend %verticalCenter;
+
+		&-img {
+			margin-right: 10px;
+		}
+
+		&-text {
+			font-size: 18px;
+			color: #000000;
+
+			line-height: 1.5;
+		}
+	}
+
+	&__days {
+		color: rgba(0, 0, 0, 0.6);
+
+		line-height: 1.5;
+
+		margin-bottom: 8px;
+	}
+	
+	&__price {
+		color: rgba(0, 0, 0, 0.6);
+
+		line-height: 1.5;
+
+		&-money {
+			font-size: 18px;
+			font-weight: 500;
+			color: #000000;
+		}
+	}
+}
+
+// Special-offers styles
+
+
+
+// Blog styles
+
+.blog {
+	padding: 140px 0;
+	
+	&__title {
+		margin-bottom: 20px;
+	}
+
+	&__description {
+		max-width: 580px;
+
+		margin-bottom: 55px;
+	}
+
+	&__item-box {
+		display: grid;
+		grid-template-rows: 1fr 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+
+		gap: 30px;
+	}
+}
+
+.blog-item {
+	display: flex;
+	align-items: center;
+
+	translate: .5s;
+
+	&:hover {
+		opacity: 0.9;
+	}
+	
+	&__img {
+		width: 265px;
+		height: 200px;
+
+		object-fit: cover;
+		border-radius: 10px;
+
+		margin-right: 30px;
+	}
+
+	&__info {
+		margin-bottom: 10px;
+	}
+
+	&__title {
+		font-size: 20px;
+
+		line-height: 1.6;
+
+		margin-bottom: 10px;
+	}
+
+	&__author {
+		font-size: 20px;
+		color: rgba(0, 0, 0, 0.8);
+
+		line-height: 1.5;
+	}
+
+	&_main {
+		flex-direction: column;
+		align-items: flex-start;
+
+		grid-row: span 3;
+		grid-column: span 1;
+
+		.blog-item__img {
+			width: 555px;
+			height: 395px;
+
+			margin-right: 30px;
+			margin-bottom: 35px;
+		}
+
+		.blog-item__description {
+			max-width: 470px;
+		}
+
+		.blog-item__author {
+			font-weight: 500;
+			color: #000000;
+		}
+	}
+}
+
+// Blog styles
+
+
+
+// Footer styles
+
+.footer {
+	background-color: rgba(38, 148, 153, 0.04);
+
+	padding: 70px 0 80px 0;
+
+	&__container {
+		@extend %flexBetween;
+		align-items: flex-start;
+
+		color: #000000;
+	}
+}
+
+.footer-main {
+	&__logo {
+		margin-bottom: 40px;
+	}
+
+	&__contact-box {
+		line-height: 1.6;
+		letter-spacing: 0.06em;
+		
+		margin-bottom: 20px;
+	}
+
+	&__social-box {
+		@extend %verticalCenter;
+
+		column-gap: 27px;
+	}
+
+	&__social {
+		transition: .5s;
+
+		&:hover {
+			transform: scale(1.1) translateY(-2px);
+		}
+	}
+}
+
+.footer-menu {
+	&__item + &__item {
+		margin-top: 20px;
+	}
+
+	&__link {
+		position: relative;
+
+		&::after {
+			@extend %menuLinkAfter;
+			background-color: #000000;
+		}
+
+		&:hover::after {
+			right: 0;
+		}
+
+		font-weight: 500;
+
+		line-height: 1.5;
+		letter-spacing: 0.06em;
+	}
+}
+
+.footer-subscribe {
+	&__title {
+		font-size: 20px;
+		font-family: 'Roboto', sans-serif;
+		font-weight: 500;
+
+		line-height: 1.5;
+		letter-spacing: 0.06em;
+
+		margin-bottom: 40px;
+	}
+}
+
+.footer-form {
+	&__input {
+		line-height: 1.5;
+		letter-spacing: 0.06em;
+
+		background-color: #ffffff;
+
+		border: 1px solid #dee2e2;
+		border-radius: 5px;
+
+		padding: 10px 20px;
+		margin-right: 35px;
+	}
+
+	&__button {
+		color: #ffffff;
+
+		padding: 10px 32px;
+	}
+}
+
+// Footer styles
 
 
 
